--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,8 +25,8 @@
   left: 50%;
 
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
 
   background-color: var(--background-color-main);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -38,6 +38,11 @@
   transition-timing-function: var(--timing-function);
 
   padding: 40px;
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -124,11 +129,16 @@
 
   &::placeholder {
     font-weight: 400;
-    font-size: 12px;
-    line-height: 1.67;
+    font-size: 14px;
+    line-height: 1.14;
     letter-spacing: 0.01em;
 
     color: rgba(117, 117, 117, 0.5);
+
+    @media screen and (min-width: 1200px) {
+      font-size: 12px;
+      line-height: 1.67;
+    }
   }
 }
 
@@ -168,10 +178,16 @@ textarea.modal-form-input {
   display: block;
 
   font-weight: 400;
-  line-height: 1.7;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 
   color: var(--paragraf-text-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.7;
+  }
 }
 
 .modal-label-checkbox a {
