--- a/sass/components/_cocials.scss
+++ b/sass/components/_cocials.scss
@@ -1,10 +1,9 @@
 .cocials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-  
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
   .cocials__link {
     display: flex;
     justify-content: center;
@@ -14,16 +13,16 @@
     border-radius: 50%;
     background-color: var(--background-color-main);
     color: var(--icon-color);
-  
+
     transition-property: color, background-color;
     transition-duration: var(--duration);
     transition-timing-function: var(--timing-function);
   }
-  
+
   .cocials__icon {
     fill: currentColor;
   }
-  
+
   .cocials__link--dark {
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--contrast-color);
@@ -37,20 +36,26 @@
 }
 
 .cocials__footer {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-    margin-right: 93px;
-  }
-  
-  .cocials__invite {
-    display: block;
-    font-weight: 700;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  
-    color: var(--contrast-color);
-  }
-  
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  align-items: center;
 
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+    margin-right: 93px;
+    margin-bottom: 0;
+  }
+}
+
+.cocials__invite {
+  display: block;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--contrast-color);
+}
