--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,39 +1,58 @@
 .features {
-      @extend %section;
-      padding-bottom: 0;
-  }
-  
-  .features-list {
+  @extend %section;
+  padding-bottom: 0;
+}
+
+.features-list {
+  @media screen and (min-width: 768px) {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
   }
-  
-  .features-item {
-    width: 270px;
-  }
-  
-  .features-picture {
-    display: flex;
+}
+
+.features-item {
+  @media screen and (max-width: 767px) {
     margin-bottom: 30px;
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
     width: 270px;
-    height: 120px;
-    align-items: center;
-    justify-content: center;
-  
-    background-color: var(--background-color-gray);
-    border-radius: 4px;
+    margin-bottom: 0;
   }
-  
-  .features-title {
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  
-    margin-bottom: 10px;
+}
+
+.features-picture {
+  display: flex;
+  margin-bottom: 30px;
+  width: 100%;
+  height: 120px;
+  align-items: center;
+  justify-content: center;
+
+  background-color: var(--background-color-gray);
+  border-radius: 4px;
+}
+
+.features-title {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
   }
-  
-  .features-text {
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-  }
+}
+
+.features-text {
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
