--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,10 @@
 .header .container {
   display: flex;
   align-items: center;
+
+  @media screen and (max-width: 767px) {
+    padding-left: 10px;;
+  }
 }
 
 .header-nav {
@@ -13,8 +17,12 @@
 }
 
 .site-nav {
-  display: flex;
-  gap: 50px;
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    gap: 50px;
+  }
 }
 
 .link-nav {
@@ -57,8 +65,6 @@
     transition: background-color var(--duration) var(--timing-function);
   }
 
-  
-
   &.current::after {
     position: absolute;
     bottom: 0;
@@ -79,42 +85,53 @@
 }
 
 .contact-heder {
-  display: flex;
-  margin-left: auto;
-  color: var(--paragraf-text-color);
-  transition: color var(--duration) var(--timing-function);
+  display: none;
 
-  .link {
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: auto;
+    color: var(--paragraf-text-color);
+    transition: color var(--duration) var(--timing-function);
+  }
+  @media screen and (min-width: 1200px) {
     display: flex;
-    padding-top: 32px;
-    padding-bottom: 32px;
+  }
+
+  .link-contact {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    padding-top: 5px;
+    padding-bottom: 5px;
 
     font-weight: 500;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.14;
+      padding-top: 32px;
+      padding-bottom: 32px;
+    }
   }
 
   .item + .item {
-    margin-left: 30px;
+    margin-left: 0;
+
+    @media screen and (min-width: 1200px) {
+      margin-left: 30px;
+    }
   }
 
   .header-icon {
     fill: currentColor;
   }
 
-  & .link:hover,
-  & .link:focus {
+  & .link-contact:hover,
+  & .link-contact:focus {
     color: var(--accent-color);
   }
-
-  .header-contact {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
- 
 }
-
-
-
-
