--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,38 +1,50 @@
 .team {
-      @extend %section;
-  
+  @extend %section;
+
   background-color: var(--background-color-gray);
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.team__list {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.team__item {
+  display: block;
+  padding-bottom: 24px;
+  background-color: var(--background-color-main);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  flex-basis: 100%;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px * 1) / 2);
   }
-  
-  .team__name {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.2;
-    text-align: center;
-    letter-spacing: 0.03em;
-  
-    margin-top: 30px;
-    margin-bottom: 10px;
-  }
-  .team__job {
-    font-size: 16px;
-    line-height: 1.2;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 16px;
-  }
-  
-  .team__list {
-    display: flex;
-    gap: 30px;
-  }
-  
-  .team__item {
+
+  @media screen and (min-width: 1200px) {
     padding-bottom: 30px;
-    background-color: var(--background-color-main);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    flex-basis: calc((100% - 30px * 3) / 4);
   }
+}
+
+.team__name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.team__job {
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 16px;
+}
