--- a/css/main.css
+++ b/css/main.css
@@ -28,11 +28,6 @@
   overflow: hidden;
 }
 
-.team, .portfolio, .features, .clients, .about {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 @-webkit-keyframes heartbeat {
   from {
     -webkit-transform: scale(1);
@@ -713,6 +708,10 @@ textarea.modal-form-input {
   padding-left: 0px;
 }
 
+.about {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 @media screen and (max-width: 1199px) {
   .about {
     display: none;
@@ -758,6 +757,10 @@ textarea.modal-form-input {
   color: var(--contrast-color);
 }
 
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .clients .clients__logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -814,6 +817,7 @@ textarea.modal-form-input {
 }
 
 .features {
+  padding-top: 94px;
   padding-bottom: 0;
 }
 
@@ -1455,19 +1459,50 @@ textarea.modal-form-input {
   }
 }
 
+.portfolio {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .portfolio-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-bottom: 40px;
   gap: 8px;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .portfolio-list {
+    width: 325px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-list {
+    margin-bottom: 50px;
+  }
 }
 
 .portfolio-button {
-  padding: 5px 21px;
+  padding: 6px 22px;
   border-radius: 4px;
   border: none;
   font-family: inherit;
@@ -1502,9 +1537,25 @@ textarea.modal-form-input {
   gap: 30px;
 }
 
+.project-item {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+@media screen and (min-width: 768px) {
+  .project-item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .project-item {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
+}
+
 .project-link {
   display: block;
-  width: 370px;
   border: var(--border-card-project);
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
@@ -1548,8 +1599,8 @@ textarea.modal-form-input {
 
 .overlay {
   position: absolute;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   width: 100%;
   height: 100%;
   top: 0;
@@ -1581,6 +1632,8 @@ textarea.modal-form-input {
 }
 
 .team {
+  padding-top: 94px;
+  padding-bottom: 94px;
   background-color: var(--background-color-gray);
   margin-left: auto;
   margin-right: auto;
