--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,5 +1,9 @@
 .features {
-  @include section(94px, 0);
+  @include section();
+
+  @media screen and (min-width: 1200px) {
+    @include section(94px, 94px);
+  }
 }
 
 .features-list {
