--- a/css/main.css
+++ b/css/main.css
@@ -186,8 +186,6 @@ img {
 @media screen and (min-width: 768px) {
   .logo {
     margin-right: 93px;
-    padding-top: 32px;
-    padding-bottom: 32px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -270,7 +268,6 @@ img {
         -ms-flex-align: start;
             align-items: flex-start;
     margin-right: 93px;
-    margin-bottom: 0;
   }
 }
 
@@ -657,9 +654,14 @@ textarea.modal-form-input {
   gap: 32px;
   margin-bottom: auto;
   font-weight: 500;
-  font-size: 40px;
-  line-height: 47px;
+  font-size: 36px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
+}
+@media screen and (min-width: 480px) {
+  .mobile-nav {
+    font-size: 40px;
+  }
 }
 
 .mobile-contact {
@@ -673,14 +675,24 @@ textarea.modal-form-input {
   gap: 32px;
   margin-bottom: 64px;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--paragraf-text-color);
 }
+@media screen and (min-width: 480px) {
+  .mobile-contact {
+    font-size: 24px;
+  }
+}
 .mobile-contact .tel {
-  font-size: 34px;
+  font-size: 22px;
   color: var(--accent-color);
+}
+@media screen and (min-width: 480px) {
+  .mobile-contact .tel {
+    font-size: 34px;
+  }
 }
 
 .mobile-cocials {
@@ -690,12 +702,18 @@ textarea.modal-form-input {
 }
 
 .mobile-cocials-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 10px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
-  height: 22px;
+  height: 16px;
   padding-right: 10px;
   padding-left: 10px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
@@ -707,9 +725,15 @@ textarea.modal-form-input {
 .mobile-cocials-list:first-child {
   padding-left: 0px;
 }
+@media screen and (min-width: 480px) {
+  .mobile-cocials-list {
+    font-size: 18px;
+    height: 22px;
+  }
+}
 
 .about {
-  padding-top: 94px;
+  padding-top: 0;
   padding-bottom: 94px;
 }
 @media screen and (max-width: 1199px) {
@@ -758,8 +782,14 @@ textarea.modal-form-input {
 }
 
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .clients .clients__logo {
   display: -webkit-box;
@@ -787,7 +817,7 @@ textarea.modal-form-input {
           align-items: center;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
-  min-width: 210px;
+  min-width: 290px;
   height: 92px;
   background-color: var(--background-color-main);
   color: var(--icon-color);
@@ -797,6 +827,11 @@ textarea.modal-form-input {
           transition-duration: var(--duration);
   -webkit-transition-timing-function: var(--timing-function);
           transition-timing-function: var(--timing-function);
+}
+@media screen and (min-width: 480px) {
+  .clients .clients__link {
+    min-width: 210px;
+  }
 }
 @media screen and (min-width: 768px) {
   .clients .clients__link {
@@ -817,8 +852,14 @@ textarea.modal-form-input {
 }
 
 .features {
-  padding-top: 94px;
-  padding-bottom: 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .features {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -917,12 +958,8 @@ textarea.modal-form-input {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-items {
-    padding-left: 76px;
-    padding-right: 89px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
 }
 
@@ -936,14 +973,10 @@ textarea.modal-form-input {
           flex-direction: column;
   row-gap: 28px;
   min-width: 231px;
+  margin-bottom: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-@media screen and (min-width: 768px) {
-  .address-items {
-    margin-right: 165px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .address-items {
@@ -951,6 +984,7 @@ textarea.modal-form-input {
         -ms-flex-align: start;
             align-items: flex-start;
     margin-right: 70px;
+    margin-bottom: 0;
   }
 }
 
@@ -967,14 +1001,12 @@ textarea.modal-form-input {
       -ms-flex-align: center;
           align-items: center;
   font-style: normal;
-  margin-bottom: 60px;
 }
 @media screen and (min-width: 1200px) {
   .address-footer {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    margin-bottom: 0;
   }
 }
 
@@ -1011,11 +1043,6 @@ textarea.modal-form-input {
       -ms-flex-direction: column;
           flex-direction: column;
   row-gap: 20px;
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-form {
-    min-width: 583px;
-  }
 }
 
 .footer-form-subscription {
@@ -1060,7 +1087,7 @@ textarea.modal-form-input {
 
 .subscription-email {
   display: block;
-  min-width: 450px;
+  min-width: 290px;
   height: 50px;
   padding-left: 16px;
   outline: unset;
@@ -1130,6 +1157,11 @@ textarea.modal-form-input {
 }
 .subscription-email:focus {
   border-color: var(--accent-color);
+}
+@media screen and (min-width: 480px) {
+  .subscription-email {
+    min-width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .subscription-email {
@@ -1300,7 +1332,14 @@ textarea.modal-form-input {
 }
 @media screen and (min-width: 768px) {
   .contact-heder {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-left: auto;
     color: var(--paragraf-text-color);
     -webkit-transition: color var(--duration) var(--timing-function);
@@ -1309,9 +1348,11 @@ textarea.modal-form-input {
 }
 @media screen and (min-width: 1200px) {
   .contact-heder {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 30px;
   }
 }
 .contact-heder .link-contact {
@@ -1322,8 +1363,6 @@ textarea.modal-form-input {
       -ms-flex-align: center;
           align-items: center;
   gap: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
@@ -1335,14 +1374,6 @@ textarea.modal-form-input {
     line-height: 1.14;
     padding-top: 32px;
     padding-bottom: 32px;
-  }
-}
-.contact-heder .item + .item {
-  margin-left: 0;
-}
-@media screen and (min-width: 1200px) {
-  .contact-heder .item + .item {
-    margin-left: 30px;
   }
 }
 .contact-heder .header-icon {
@@ -1386,7 +1417,7 @@ textarea.modal-form-input {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/img_medium@2x.jpg);
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -1396,7 +1427,7 @@ textarea.modal-form-input {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/img_large@1x.jpg);
   }
 }
-@media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/img_large@2x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/img_large@2x.jpg);
@@ -1404,9 +1435,14 @@ textarea.modal-form-input {
 }
 
 .hero-content {
-  width: 360px;
+  width: 290px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 480px) {
+  .hero-content {
+    width: 360px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero-content {
@@ -1417,11 +1453,16 @@ textarea.modal-form-input {
 .hero-title {
   color: var(--contrast-color);
   font-weight: 900;
-  font-size: 26px;
+  font-size: 20px;
   line-height: 1.6;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .hero-title {
+    font-size: 26px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero-title {
@@ -1482,7 +1523,7 @@ textarea.modal-form-input {
   margin-bottom: 40px;
   gap: 8px;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .portfolio-list {
     width: 325px;
   }
@@ -1632,11 +1673,17 @@ textarea.modal-form-input {
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--background-color-gray);
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team__list {
