--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -66,9 +66,13 @@
   margin-bottom: auto;
 
   font-weight: 500;
-  font-size: 40px;
-  line-height: 47px;
+  font-size: 36px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
+
+  @media screen and (min-width: 480px) {
+    font-size: 40px;
+  }
 }
 
 .mobile-contact {
@@ -78,15 +82,23 @@
   margin-bottom: 64px;
 
   font-weight: 500;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.02em;
 
   color: var(--paragraf-text-color);
 
+  @media screen and (min-width: 480px) {
+    font-size: 24px;
+  }
+
   .tel {
-    font-size: 34px;
+    font-size: 22px;
     color: var(--accent-color);
+
+    @media screen and (min-width: 480px) {
+      font-size: 34px;
+    }
   }
 }
 
@@ -95,13 +107,16 @@
 }
 
 .mobile-cocials-list {
+  display: flex;
+  align-items: center;
+
   font-weight: 500;
-  font-size: 18px;
+  font-size: 10px;
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: var(--accent-color);
 
-  height: 22px;
+  height: 16px;
   padding-right: 10px;
   padding-left: 10px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
@@ -113,5 +128,10 @@
 
   &:first-child {
     padding-left: 0px;
+  }
+
+  @media screen and (min-width: 480px) {
+    font-size: 18px;
+    height: 22px;
   }
 }
