--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,8 +1,8 @@
 .portfolio {
-  @include section(60px, 60px);
+  @include section();
 
   @media screen and (min-width: 1200px) {
-    @include section();
+    @include section(94px, 94px);
   }
 }
 
@@ -14,7 +14,7 @@
   margin-bottom: 40px;
   gap: 8px;
 
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     width: 325px;
   }
 
