--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,6 +1,11 @@
 .team {
   @include section();
 
+  @media screen and (min-width: 1200px) {
+    @include section(94px, 94px);
+  }
+   
+
   background-color: var(--background-color-gray);
   margin-left: auto;
   margin-right: auto;
