--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,7 +25,7 @@
   left: 50%;
 
   transform: translate(-50%, -50%) scale(1);
-  width: 450px;
+  width: 95%;   
   height: 609px;
 
   background-color: var(--background-color-main);
@@ -38,6 +38,10 @@
   transition-timing-function: var(--timing-function);
 
   padding: 40px;
+
+  @media screen and (min-width: 480px) {
+    width: 450px; 
+  }
 
   @media screen and (min-width: 1200px) {
     width: 528px;
