--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -8,42 +8,36 @@
   .clients__logo {
     display: flex;
     gap: 30px;
-    align-items: center;
-    justify-content: center;
-
     flex-wrap: wrap;
+  }
+
+  .clients__item {
+    display: flex;
+    flex-basis: calc((100% - 30px) / 2);
+    height: 92px;
+
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 60px) / 3);
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - (5 * 30px)) / 6);
+    }
   }
 
   .clients__link {
     display: flex;
+    flex-basis: 100%;
     justify-content: center;
     align-items: center;
 
     border: 1px solid var(--icon-color);
     border-radius: 4px;
-
-    min-width: 290px;
-
-    height: 92px;
-
-    background-color: var(--background-color-main);
     color: var(--icon-color);
 
     transition-property: color, border;
     transition-duration: var(--duration);
     transition-timing-function: var(--timing-function);
-
-    @media screen and (min-width: 480px) {
-      min-width: 210px;
-    }
-
-    @media screen and (min-width: 768px) {
-      min-width: 226px;
-    }
-
-    @media screen and (min-width: 1200px) {
-      min-width: 170px;
-    }
   }
 
   .clients__icon {
